# thesis_boogaloo

./: .gitignore  README.md  REPO_EXPLAINED.md  Thesis 2_12.md  distance_km.py  find_nearest.py  get_temp.py  get_temperatures.py  load_stations.py  pyproject.toml  sample.ipynb  stations_fixad.csv  temp_at_time.py  test.ipynb
CLAUDE_versions/: CLAUDE_2026-04-pre-migration.md
config/: hyperparameters.yaml
diagrams/: functions_callgraph_code2flow.gv  project_tree.txt
notebooks/: 04_results_visualisation.ipynb  sample.ipynb  test.ipynb  test.ipynb.pre-cell25-removal.bak  test2.ipynb  test_with_animals.ipynb  tetttt.ipynb
outputs/models/: .gitkeep
scripts/: _internal_audit_check.py  audit_verification.md  block_bootstrap.py  calc_epv_diagnostics.py  collect_reference_pdfs.py  compare_models.py  count_animals.py  export_bootstrap.py  train_final_model.py
src/: __init__.py  _logging_utils.py  config.py  data_prep.py  exports.py  features.py  grid.py  infrastructure.py  models.py  roads.py  visualisation.py  weather.py
tests/: test_block_bootstrap.py  test_compare_models.py  test_data_prep.py  test_features.py  test_grid.py  test_infrastructure.py  test_models.py  test_visualisation.py
thesis_boogaloo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
