#This is kind of like a master file where we define stuff.
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis_boogaloo"
version = "0.1.0"
description = "Predicting High-Risk Wildlife Zones in Sweden with Machine Learning and Environmental Data"

dependencies = [
    #The versions were suggested by the ide //Alex
    #More will most likely follow //Alex
    # Data handling
    "pandas>=2.0.0",        # DataFrames - load, clean, manipulate CSV/Excel data
    "numpy>=1.24.0",        # Math arrays - fast numerical operations

    # Machine learning
    "scikit-learn>=1.3.0",  # ML models - Random Forest, Linear Regression, etc.

    # Visualization
    "matplotlib>=3.7.0",    # Basic plotting - low-level charts
    "seaborn>=0.12.0",      # Statistical plots - beautiful charts with less code

    # External data
    "requests>=2.28.0",     # HTTP requests - fetch data from SMHI API

    # Jupyter notebooks
    "jupyter>=1.0.0",       # Notebook interface - run code interactively
    "ipykernel>=6.25.0",    # Jupyter kernel - connects notebooks to Python

    # Config files
    "pyyaml>=6.0.0",        # YAML parser - read hyperparameters.yaml
]

[tool.setuptools]
packages = ["src"]

